fix blurry

--- a/game.css
+++ b/game.css
@@ -1,4 +1,2 @@
 #game-canvas {
-	width: 1000px;
-	height: 600px;
 }
